--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,10 +78,10 @@ android {
 
 
         // paho dependencies
-        implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
+        implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
         implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
 
-        ktlint "com.pinterest:ktlint:0.36.0"
+        ktlint 'com.pinterest:ktlint:0.37.2'
     }
 
 
