--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ android {
     configurations {
         ktlint
     }
+
+
     dependencies {
         implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
         implementation("androidx.compose:compose-runtime:$compose_version")
@@ -52,10 +54,10 @@ android {
         implementation("androidx.ui:ui-foundation:$compose_version")
         implementation("androidx.ui:ui-animation:$compose_version")
         implementation "androidx.ui:ui-tooling:$compose_version"
-        implementation('androidx.appcompat:appcompat:1.1.0')
+        implementation('androidx.appcompat:appcompat:1.2.0')
         implementation('androidx.activity:activity-ktx:1.1.0')
         implementation "androidx.core:core-ktx:1.2.0"
-
+        implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
         testImplementation 'junit:junit:4.13'
 
@@ -76,7 +78,9 @@ android {
 
         // paho dependencies
         implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
-        implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+        implementation ('org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'){
+            exclude module: 'support-v4'
+        }
 
         ktlint 'com.pinterest:ktlint:0.37.2'
     }
