--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ buildscript {
     repositories {
         google()
         jcenter()
+        // paho repository
+        maven {
+            url "https://repo.eclipse.org/content/repositories/paho-snapshots/"
+        }
     }
     dependencies {
        classpath 'com.android.tools.build:gradle:4.2.0-alpha07'
